fixed link in encapsulation page

--- a/src/html/encapsulation.html
+++ b/src/html/encapsulation.html
@@ -77,8 +77,8 @@
             Since there would be no getters/setters for those variables they would be private to the class. Unless you declared
             them as protected. Then they would be visible to the class and subclasses.
         </p>
-        <strong>Reference:</strong> <a href="http://localhost:63342/BlogWebsite/html/encapsulation.html">
-        http://localhost:63342/BlogWebsite/html/encapsulation.html</a>
+        <strong>Reference:</strong> <a href="https://canvas.instructure.com/courses/2991316/pages/encapsulation?module_item_id=48399320">
+        https://canvas.instructure.com/courses/2991316/pages/encapsulation?module_item_id=48399320</a>
     </div>
 </div>
 
